# phantom

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  phantom-dev.sh  phantom.sh
AIDesign/: README.md  __init__.py  agent.py  logging_config.py  pyproject.toml
AIDesign/scripts/: run.sh  service.sh  start.sh
AIDesign/tests/: conftest.py  test_agent.py  test_runner.py
AIDesign/tests/fakes/: fake_phantom.sh
AIDevTest/: .gitignore  README.md  __init__.py  agent.py  logging_config.py  pyproject.toml  runner.py
AIDevTest/scripts/: run.sh  service.sh  start.sh
AIDevTest/tests/: test_agent.py  test_runner.py
AIDevelop/: CLAUDE.md  phantom.sh
AIIdea/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
AIIdea/backend/alembic/: env.py
AIIdea/backend/alembic/versions/: 38caf4419f59_add_product_experience_reports.py  425b560aeb5f_initial_tables.py  a1c4e2f0b8d3_add_product_candidates.py  b9ba9e1280e4_add_item_insights_fields.py  c2e8a7d6f4b9_add_signal_type.py  c7f31ea0b2c8_analysis_product_fields.py  d3f1c8a9b2e7_add_project_name.py  d82a4e19f4ab_add_lineage_fields.py  e3f5a9c1d8b2_add_evidence_field.py  e7b2c4d8a531_add_product_type.py  f4a8c2e9d5b7_reasoning_and_anchor.py  f5a93c1d2b8e_add_project_name_to_experience.py  g6c104e3a2b9_add_aijuicer_workflow_id.py  h7e218b95c4d_add_inspiration_fields.py
AIIdea/backend/scripts/: audit_existing_reports.py  backfill_analysis_reports.py  bootstrap_browser_profile.py  probe_sources.py  sources_probe_report.md
AIIdea/backend/src/: config.py  db.py  envelope.py  exceptions.py  logging_setup.py  main.py  middleware.py
AIIdea/backend/src/agent/: extractor.py  graph.py  prompts.py  state.py
AIIdea/backend/src/api/: analysis_results.py  health.py  pipeline.py  product_experience_reports.py  router.py  source_items.py  stats.py
AIIdea/backend/src/collectors/: base.py  generic_html.py  generic_json.py  github_trending.py  hackernews.py  ingester.py  producthunt.py  reddit.py  rss_collector.py  sources_registry.py  twitter_trends.py
AIIdea/backend/src/integrations/: aijuicer.py
AIIdea/backend/src/models/: __init__.py  analysis_result.py  product_candidate.py  product_experience_report.py  source_item.py
AIIdea/backend/src/processors/: analyzer.py  enricher.py  pipeline.py
AIIdea/backend/src/product_discovery/: playwright_extractor.py  producthunt.py  runner.py  types.py
AIIdea/backend/src/product_experience/: codex_runner.py  extractor.py
AIIdea/backend/src/scheduler/: jobs.py  runs.py
AIIdea/backend/src/schemas/: analysis_result.py  product_experience_report.py  source_item.py
AIIdea/backend/tests/: conftest.py  test_config.py  test_db.py  test_envelope.py  test_health.py  test_logging_setup.py  test_middleware.py  test_models.py  test_scheduler.py  test_scheduler_run_analysis.py  test_scheduler_run_experience.py  test_scheduler_runs.py
AIIdea/backend/tests/test_agent/: test_graph.py  test_tools.py
AIIdea/backend/tests/test_api/: test_analysis_results.py  test_pagination_contract.py  test_pipeline.py  test_pipeline_backoff.py  test_pipeline_inline.py  test_source_items.py  test_stats.py
AIIdea/backend/tests/test_collectors/: test_generic_html.py  test_generic_json.py  test_hackernews.py  test_ingester.py  test_reddit.py  test_rss_collector.py  test_sources_registry.py  test_twitter_trends.py
AIJuicer/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
AIJuicer/alembic/: env.py
AIJuicer/alembic/versions/: 0001_initial_schema.py  0002_finder_to_idea.py  0003_artifact_content_in_db.py  0004_artifact_attempt.py  0005_workflow_project_name.py
AIJuicer/cli/aijuicer_cli/: __init__.py  __main__.py  main.py
AIJuicer/scheduler/: config.py  main.py
AIJuicer/scheduler/api/: __init__.py  agents.py  approvals.py  artifacts.py  dashboard.py  events.py  schemas.py  system.py  tasks.py  workflows.py
AIJuicer/scheduler/engine/: approval_service.py  event_bus.py  project_name.py  recovery.py  state_machine.py  task_service.py  workflow_service.py
AIJuicer/scheduler/observability/: logging.py  metrics.py  middleware.py
AIJuicer/scheduler/storage/: agent_presence.py  db.py  models.py  redis_queue.py
AIJuicer/scheduler/tests/: conftest.py  test_api.py  test_approval_service.py  test_config.py  test_events_and_artifacts.py  test_heartbeat_monitor.py  test_logging.py  test_recovery.py  test_redis_enqueue.py  test_state_machine.py  test_task_service.py  test_workflow_service.py
AIJuicer/scheduler/workers/: heartbeat_monitor.py
AIJuicer/scripts/: run_all.sh  service.sh
AIJuicer/sdk/: README.md  pyproject.toml
AIJuicer/sdk/aijuicer_sdk/: __init__.py  agent.py  context.py  errors.py  logging.py  slug.py  transport.py  types.py
AIJuicer/sdk/examples/: ai_deploy.py  ai_design.py  ai_devtest.py  ai_finder.py  ai_idea.py  ai_plan.py  ai_requirement.py  echo_agent.py
AIJuicer/sdk/tests/: test_agent_run_one.py  test_auto_heartbeat.py  test_context.py
AIJuicer/webui/: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
AIJuicer/webui/app/: globals.css  layout.tsx  page.tsx
AIJuicer/webui/components/: artifact-compare.tsx  artifact-edit-dialog.tsx  artifact-viewer.tsx  dag.tsx  history-panel.tsx  juicer-spinner.tsx  pagination.tsx  rerun-dialog.tsx  timeline.tsx  workflow-filters.tsx  workflow-row.tsx
AIJuicer/webui/lib/: api.ts  artifact.ts  slug.ts
AIPlan/: CLAUDE.md  README.md  __init__.py  agent.py  logging_config.py  pyproject.toml  runner.py
AIPlan/scripts/: run.sh  service.sh  start.sh
AIPlan/tests/: test_agent.py  test_runner.py
AIPlan/tests/fakes/: fake_phantom_env.sh
(+176 files in other folders)
