[project]
name = "ai-design"
version = "0.1.0"
description = "AIJuicer ai-design worker — wraps the phantom CLI for the design step."
requires-python = ">=3.12"
dependencies = [
  "aijuicer-sdk>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
ai-design = "ai_design.agent:agent.run"

[tool.setuptools]
packages = ["ai_design"]
package-dir = {"ai_design" = "."}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
