[project]
name = "ai-plan"
version = "0.1.0"
description = "AIJuicer ai-plan worker — wraps the phantom CLI for the plan step."
requires-python = ">=3.12"
dependencies = [
  "aijuicer-sdk>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
ai-plan = "ai_plan.agent:agent.run"

[tool.setuptools]
packages = ["ai_plan"]
package-dir = {"ai_plan" = "."}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
