[project]
name = "ai-idea"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.12.0",
    "playwright>=1.49.0",
    "langchain>=0.3.14",
    "langgraph>=0.2.60",
    "langchain-openai>=0.3.0",
    "apscheduler>=3.11.0",
    "aijuicer-sdk>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
